# ds-cerf-supplement

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml
.github/workflows/: check-storm-sids.yml  claude-match-storms.yml  deploy-site.yml  match-drought.yml  match-storms.yml  refresh-mirror.yml
prompts/: match_droughts.md  match_storms.md
scripts/: apply_claude_matches.py  apply_drought_matches.py  check_storm_sids.py  export_site_data.py  fill_guessed_sids.py  finalize_storms.py  migrate_blob_to_db.py  prepare_claude_input.py  prepare_drought_input.py  raise_review_issues.py  refresh_mirror.py  resolve_unmatched.py  seed_from_existing.py
site/: index.html
src/: cerf_api.py  claude_assist.py  db.py  storage.py
